--- a/argocd/backend.yml
+++ b/argocd/backend.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
+  namespace: thetym  # Add the namespace here
 spec:
   replicas: 1
   selector:
@@ -22,6 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
+  namespace: thetym  # Add the namespace here
 spec:
   type: NodePort
   ports:
