--- a/portainer/namespace-permissions.yaml
+++ b/portainer/namespace-permissions.yaml
@@ -1,22 +1,34 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: namespace-reader
+  name: portainer-full-access
 rules:
 - apiGroups: [""]
-  resources: ["namespaces"]
-  verbs: ["get", "list"]
+  resources: ["*"]
+  verbs: ["*"]
+- apiGroups: ["apps", "extensions"]
+  resources: ["*"]
+  verbs: ["*"]
+- apiGroups: ["batch"]
+  resources:
+  - jobs
+  - cronjobs
+  verbs: ["*"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["roles", "rolebindings", "clusterroles", "clusterrolebindings"]
+  verbs: ["*"]
+# Add more rules for other resources as needed
 
----
+===============================================
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: read-namespaces
+  name: portainer-full-access-binding
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: portainer-sa
   namespace: thetym
 roleRef:
   kind: ClusterRole
-  name: namespace-reader
+  name: portainer-full-access
   apiGroup: rbac.authorization.k8s.io
