--- a/portainer/list-deployments-clusterrole.yaml
+++ b/portainer/list-deployments-clusterrole.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: list-deployments
+  name: list-resources
 rules:
 - apiGroups:
   - apps
@@ -9,3 +9,22 @@ rules:
   - deployments
   verbs:
   - list
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs:
+  - list
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: bind-list-resources
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: thetym
+roleRef:
+  kind: ClusterRole
+  name: list-resources
+  apiGroup: rbac.authorization.k8s.io
