--- a/portainer/list-deployments-clusterrole.yaml
+++ b/portainer/list-deployments-clusterrole.yaml
@@ -17,6 +17,12 @@ rules:
   - ingresses
   verbs:
   - list
+- apiGroups:
+  - autoscaling
+  resources:
+  - horizontalpodautoscalers
+  verbs:
+  - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
