--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  namespace: thetym  # Add the namespace here
+  namespace: thetym
 spec:
   replicas: 1
   selector:
@@ -16,8 +16,16 @@ spec:
       containers:
       - name: backend
         image: ramesh10654/thetymbackend:v1.1
+        resources:
+          requests:
+            memory: "1Gi"   # Adjust the memory request as needed
+            cpu: "500m"
+          limits:
+            memory: "2Gi"   # Adjust the memory limit as needed
+            cpu: "1"
       imagePullSecrets:
       - name: dockerhub-secret
+
 ---
 apiVersion: v1
 kind: Service
