--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  namespace: thetym  # Add the namespace here
+  namespace: thetym
 spec:
   replicas: 1
   selector:
@@ -13,11 +13,19 @@ spec:
       labels:
         app: backend
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-role.kubernetes.io/master
+                operator: Exists
       containers:
       - name: backend
         image: ramesh10654/thetymbackend:v1.1
       imagePullSecrets:
       - name: dockerhub-secret
+
 ---
 apiVersion: v1
 kind: Service
