--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -13,13 +13,10 @@ spec:
       labels:
         app: backend
     spec:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: node-role.kubernetes.io/master
-                operator: Exists
+      tolerations:
+      - key: "node-role.kubernetes.io/control-plane"
+        operator: "Exists"
+        effect: "NoSchedule"
       containers:
       - name: backend
         image: ramesh10654/thetymbackend:v1.1
