--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -24,12 +24,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: thetym  # Add the namespace here
+  namespace: thetym
 spec:
-  type: NodePort
+  type: LoadBalancer  # Use LoadBalancer type
   ports:
   - port: 80
     targetPort: 8080
-    nodePort: 31000  # Choose a nodePort within the allowed range
   selector:
     app: backend
