--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -24,11 +24,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: thetym
+  namespace: thetym  # Add the namespace here
 spec:
-  type: LoadBalancer  # Use LoadBalancer type
+  type: NodePort
   ports:
   - port: 80
     targetPort: 8080
+    nodePort: 31000  # Choose a nodePort within the allowed range
   selector:
     app: backend
