--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -1,9 +1,8 @@
-User
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  namespace: thetym  # Add the namespace here
+  namespace: thetym
 spec:
   replicas: 1
   selector:
@@ -25,12 +24,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: thetym  # Add the namespace here
+  namespace: thetym
 spec:
   type: NodePort
   ports:
   - port: 80
     targetPort: 8080
-    nodePort: 31000  # Choose a nodePort within the allowed range
+    nodePort: 31000
   selector:
     app: backend
