--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
-  namespace: thetym  # Add the namespace here
+  namespace: thetym
 spec:
   replicas: 1
   selector:
@@ -16,9 +16,10 @@ spec:
       containers:
       - name: backend
         image: ramesh10654/thetymbackend:v1.1
+        imagePullPolicy: IfNotPresent  # Ensure image is only pulled if not present
         imagePullSecrets:
         - name: dockerhub-secret
-        env:  # Indentation issue, moved inside the container definition
+        env:
         - name: SPRING_DATA_MONGODB_URI
           value: "mongodb+srv://admin:bbs2020@cluster0.ohkfp.mongodb.net/testdb?retryWrites=true&w=majority"
 ---
@@ -26,12 +27,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: thetym  # Add the namespace here
+  namespace: thetym
 spec:
   type: NodePort
   ports:
   - port: 80
     targetPort: 8080
-    nodePort: 31000  # Choose a nodePort within the allowed range
+    nodePort: 31000
   selector:
     app: backend
