--- a/helm/frontend/deployment.yaml
+++ b/helm/frontend/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "myapp-chart.fullname" . }}
+  namespace: thetym
   labels:
     {{- include "myapp-chart.labels" . | nindent 4 }}
 spec:
@@ -18,4 +19,4 @@ spec:
         - name: frontend
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
-            - containerPort: {{ .Values.service.port }}
+            - containerPort: {{ .Values.containerPort }}
