--- a/helm/frontend/service.yaml
+++ b/helm/frontend/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "myapp-chart.fullname" . }}
+  namespace: thetym
   labels:
     {{- include "myapp-chart.labels" . | nindent 4 }}
 spec:
