--- a/argocd/ingress.yml
+++ b/argocd/ingress.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   rules:
   - host: dev.thetym.com  # Replace with your actual domain
-    http:
+    https:
       paths:
       - path: /
         pathType: Prefix
