--- a/argocd/HorizontalPodAutoscaler.yml
+++ b/argocd/HorizontalPodAutoscaler.yml
@@ -1,5 +1,4 @@
-# HorizontalPodAutoscaler YAML
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: frontend-autoscaler
@@ -10,9 +9,6 @@ spec:
     kind: Deployment
     name: frontend
   minReplicas: 1   # Minimum number of replicas
-  maxReplicas: 2  # Maximum number of replicas
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      targetAverageUtilization: 50   # Target average CPU utilization percentag
+  maxReplicas: 2 # Maximum number of replicas
+  targetCPUUtilizationPercentage: 50   # Target average CPU utilization percentage
+
