--- a/argocd/HorizontalPodAutoscaler.yml
+++ b/argocd/HorizontalPodAutoscaler.yml
@@ -9,6 +9,14 @@ spec:
     kind: Deployment
     name: frontend
   minReplicas: 1   # Minimum number of replicas
-  maxReplicas: 2 # Maximum number of replicas
-  targetCPUUtilizationPercentage: 15   # Target average CPU utilization percentage
+  maxReplicas: 2   # Maximum number of replicas
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      targetAverageUtilization: 15
+  - type: Resource
+    resource:
+      name: memory
+      targetAverageUtilization: 15   # Adjust as needed
 
