--- a/argocd/HorizontalPodAutoscaler.yml
+++ b/argocd/HorizontalPodAutoscaler.yml
@@ -14,9 +14,9 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 25
+      targetAverageUtilization: 15%
   - type: Resource
     resource:
       name: memory
-      targetAverageUtilization: 25  # Adjust as needed
+      targetAverageUtilization: 15% # Adjust as needed
 
