--- a/argocd/HorizontalPodAutoscaler.yml
+++ b/argocd/HorizontalPodAutoscaler.yml
@@ -9,14 +9,14 @@ spec:
     kind: Deployment
     name: frontend
   minReplicas: 1   # Minimum number of replicas
-  maxReplicas: 2   # Maximum number of replicas
+  maxReplicas: 5   # Maximum number of replicas
   metrics:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 15%
+      targetAverageUtilization: 20
   - type: Resource
     resource:
       name: memory
-      targetAverageUtilization: 15% # Adjust as needed
+      targetAverageUtilization: 20 # Adjust as needed
 
