--- a/argocd/HorizontalPodAutoscaler.yml
+++ b/argocd/HorizontalPodAutoscaler.yml
@@ -18,6 +18,6 @@ spec:
   - type: Resource
     resource:
       name: memory
-      targetAverageUtilization: 15 # Adjust as needed
-    
+      targetAverageUtilization: 15  # Corrected target utilization for memory
+
  
