--- a/argocd/HorizontalPodAutoscaler.yml
+++ b/argocd/HorizontalPodAutoscaler.yml
@@ -9,14 +9,7 @@ spec:
     kind: Deployment
     name: frontend
   minReplicas: 1   # Minimum number of replicas
-  maxReplicas: 5   # Maximum number of replicas
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      targetAverageUtilization: 15
-  - type: Resource
-    resource:
-      name: memory
-      targetAverageUtilization: 15  # Corrected target utilization for memory
+  maxReplicas: 10  # Maximum number of replicas
+  targetCPUUtilizationPercentage: 10   # Target average CPU utilization percentage
+
 
