--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -20,7 +20,7 @@ spec:
           image: ramesh10654/thetymbackend:v1.1
           env:
             - name: SPRING_DATA_MONGODB_URI
-              value: mongodb://dbadmin:bbs2020@13.233.253.109:37011,13.233.253.109:37022,13.233.253.109:37033/Thetymv2?replicaSet=ReplSet1&authSource=admin&connectTimeoutMS=300000
+              value: mongodb://dbadmin:bbs2020@ip-172-31-5-87.ap-south-1.compute.internal:37011,ip-172-31-5-87.ap-south-1.compute.internal:37022,ip-172-31-5-87.ap-south-1.compute.internal:37033/Thetymv2?replicaSet=ReplSet1&authSource=admin
           imagePullPolicy: IfNotPresent
           imagePullSecrets:
             - name: dockerhub-secret
