--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -20,7 +20,7 @@ spec:
           image: ramesh10654/thetymbackend:v1.1
           env:
             - name: SPRING_DATA_MONGODB_URI
-              value: mongodb+srv://admin:bbs2020@cluster0.ohkfp.mongodb.net/betatest?retryWrites=true&w=majority
+              value: mongodb+srv://admin:bbs2020@cluster0.ohkfp.mongodb.net/testdb?retryWrites=true&w=majority
           imagePullPolicy: IfNotPresent
           resources: {}
           imagePullSecrets:
