--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -22,4 +22,4 @@ spec:
             - name: SPRING_DATA_MONGODB_URI
               value: mongodb+srv://admin:bbs2020@cluster0.ohkfp.mongodb.net/testdb?retryWrites=true&w=majority
           imagePullSecrets:
-            - name: dockerhub-secret
+            - name: dockerhub-secret1
