--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -20,6 +20,6 @@ spec:
           image: ramesh10654/thetymbackend:v1.2
           env:
             - name: SPRING_DATA_MONGODB_URI
-              value: mongodb+srv://admin:bbs2020@cluster0.ohkfp.mongodb.net/testdb?retryWrites=true&w=majority
-          imagePullSecrets:
+              value: 
+          imagePullSecrets:mongodb://dbadmin:bbs2020@ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37011,ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37022,ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37033/Thetymv2?replicaSet=ReplSet1&authSource=admin&connectTimeoutMS=300000
             - name: dockerhub-secret
