--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app.kubernetes.io/instance: thetym-backend
   name: backend
   namespace: thetym
+  labels:
+    app: backend
 spec:
   replicas: 1
   selector:
@@ -16,10 +16,13 @@ spec:
         app: backend
     spec:
       containers:
-        - name: backend
-          image: ramesh10654/thetymbackend:v1.2
-          env:
-            - name: SPRING_DATA_MONGODB_URI
-              value: mongodb://dbadmin:bbs2020@ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37011,ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37022,ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37033/Thetymv2?replicaSet=ReplSet1&authSource=admin&connectTimeoutMS=300000
-          imagePullSecrets:
-            - name: dockerhub-secret
+      - name: backend
+        image: ramesh10654/thetymbackend:v1.2
+        ports:
+        - containerPort: 80  # Add the container port if your backend service listens on a specific port
+        env:
+        - name: SPRING_DATA_MONGODB_URI
+          value: "mongodb://dbadmin:bbs2020@ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37011,ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37022,ec2-13-233-100-218.ap-south-1.compute.amazonaws.com:37033/Thetymv2?replicaSet=ReplSet1&authSource=admin&connectTimeoutMS=300000"
+        imagePullPolicy: IfNotPresent  # Specify the image pull policy if needed
+        imagePullSecrets:
+        - name: dockerhub-secret
