--- a/helm/frontend/service.yaml
+++ b/helm/frontend/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "myapp-chart.fullname" . }}
-  namespace: thetym
-  labels:
-    {{- include "myapp-chart.labels" . | nindent 4 }}
+  name: {{ include "backend-chart.fullname" . }}
+  namespace: {{ .Release.Namespace }}
 spec:
-  type: {{ .Values.service.type }}
+  type: NodePort
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
-      nodePort: {{ .Values.service.nodePort }}
+    - port: 80
+      targetPort: 80
+      nodePort: 31000
   selector:
-    app: frontend
+    app: backend
