--- a/argocd/frontend.yml
+++ b/argocd/frontend.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: docker.io/ramesh10654/myapp:v1.2
+        image: docker.io/ramesh10654/dev-frontend:1.1
         ports:
         - containerPort: 80
         resources:
