--- a/argocd/HorizontalPodAutoscaler.yml
+++ b/argocd/HorizontalPodAutoscaler.yml
@@ -1,15 +1,15 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
+  labels:
+    app.kubernetes.io/instance: frontend
   name: frontend-autoscaler
   namespace: thetym
 spec:
+  maxReplicas: 3
+  minReplicas: 1
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: frontend
-  minReplicas: 1   # Minimum number of replicas
-  maxReplicas: 3  # Maximum number of replicas
-  targetCPUUtilizationPercentage: 50 # Target average CPU utilization percentage
-
-
+  targetCPUUtilizationPercentage: 50
