--- a/argocd-backend/backend.yml
+++ b/argocd-backend/backend.yml
@@ -1,10 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
-  namespace: thetym
   labels:
     app: backend
+    app.kubernetes.io/instance: backend
+  name: backend
+  namespace: thetym
 spec:
   replicas: 1
   selector:
@@ -16,13 +17,14 @@ spec:
         app: backend
     spec:
       containers:
-      - name: backend
-        image: ramesh10654/dev-backend:1.2
-        ports:
-        - containerPort: 80  # Add the container port if your backend service listens on a specific port
-        env:
-        - name: SPRING_DATA_MONGODB_URI
-          value: mongodb+srv://admin:bbs2020@cluster0.ohkfp.mongodb.net/testdb?retryWrites=true&w=majority
-        imagePullPolicy: IfNotPresent  # Specify the image pull policy if needed
-        imagePullSecrets:
-        - name: dockerhub-secret
+        - env:
+            - name: SPRING_DATA_MONGODB_URI
+              value: >-
+                mongodb+srv://admin:bbs2020@cluster0.ohkfp.mongodb.net/testdb?retryWrites=true&w=majority
+          image: 'ramesh10654/dev-backend:1.2'
+          imagePullPolicy: IfNotPresent
+          imagePullSecrets:
+            - name: dockerhub-secret
+          name: backend
+          ports:
+            - containerPort: 80
