--- a/argocd/ingress.yml
+++ b/argocd/ingress.yml
@@ -1,19 +1,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: frontend-ingress
-  namespace: thetym
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+  labels:
+    app.kubernetes.io/instance: frontend
+  name: frontend-ingress
+  namespace: thetym
 spec:
   rules:
-  - host: your-app-domain.com  # Replace with your actual domain
-    http:
-      paths:
-      - pathType: Prefix
-        path: /
-        backend:
-          service:
-            name: frontend
-            port:
-              number: 80
+    - host: your-app-domain.com
+      http:
+        paths:
+          - backend:
+              service:
+                name: frontend
+                port:
+                  number: 80
+            path: /
+            pathType: Prefix
